# SharedPad

SharePadServer/Headers/: ClientInformation.h  JsonRequestMessageParser.h  Server.h
SharePadServer/Headers/JsonMessageContainers/: GenericResponseMessage.h
SharePadServer/Sources/: ClientInformation.cpp  Server.cpp
SharePadServer/Sources/JsonMessageContainers/: LoginResponseMessage.cpp
SharedPadClient/: Client.cpp  Client.h  Client.h.autosave  ClientHelper.cpp  ClientHelper.h  ConnectionTest.cpp  ConnectionTest.h  ConnectionTest.h.autosave  ErrorHandler.cpp  ErrorHandler.h  GenericRequest.cpp  GenericRequestMessage.cpp  GenericRequestMessage.h  GenericResponse.cpp  GenericResponseMessage.cpp  GenericResponseMessage.h  HeartBeatSender.cpp  HeartBeatSender.h  JsonRequestGenerator.cpp  JsonRequestMessageGenerator.cpp  JsonRequestMessageGenerator.h  JsonResponseMessageParser.cpp  JsonResponseMessageParser.h  JsonResponseParser.cpp  JsonResponseParser.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mediator.cpp  Mediator.h  NamespaceSPP.h  NewsChecker.cpp  NewsChecker.h  NotepadWindow.cpp  NotepadWindow.h  NotepadWindow.ui  PairSyncWorker.cpp  (+18 more)
SharedPadClient/Headers/: GenericRequest.h  JsonRequestGenerator.h  NotepadWindow.h  SpecializedRequest.h  StatusCodesAndDescriptions.h
SharedPadClient/Sources/: HeartBeatSender.cpp  JsonResponseParser.cpp  LoginWindow.cpp  NotepadWindow.cpp
SharedPadServer/: CMakeLists.txt
SharedPadServer/Headers/: ClientInformation.h  ErrorHandler.h  GenericResponse.h  GenericResponseMessage.h  JsonRequestMessageParser.h  JsonRequestParser.h  JsonResponseGenerator.h  JsonResponseMessageGenerator.h  NamespaceSPP.h  Server.h  SpecializedResponse.h  StatusCodesAndDescriptions.h  User.h  Users.txt
SharedPadServer/Headers/JsonMessageContainers/: GenericResponseMessage.h  LoginResponseMessage.h
SharedPadServer/Sources/: ClientInformation.cpp  ErrorHandler.cpp  GenericResponse.cpp  GenericResponseMessage.cpp  JsonRequestMessageParser.cpp  JsonRequestParser.cpp  JsonResponseGenerator.cpp  JsonResponseMessageGenerator.cpp  Server.cpp  SpecializedResponse.cpp  User.cpp  main.cpp
SharedPadServer/Sources/JsonMessageContainers/: GenericResponseMessage.cpp
SharedPadServer/include/rapidjson/: allocators.h  document.h  encodedstream.h  reader.h
SharedPadServer/include/spdlog/: async_logger.h  logger.h  spdlog.h
SharedPadServer/include/spdlog/details/: logger_impl.h  mpmc_bounded_q.h  pattern_formatter_impl.h  registry.h
SharedPadServer/include/spdlog/fmt/bundled/: format.h
(+4 files in other folders)
